Disable custom fullscreen transition on 10.13+, fix titlebar appearance during the transition.

Bug: 741478
Change-Id: I7b576273b0e7ec08af24291115db1c8e8f9b3da8
Reviewed-on: https://chromium-review.googlesource.com/581232
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Sarah Chan <spqchan@chromium.org>
Commit-Queue: Sidney San Martin <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488687}
Former-commit-id: 71aac2d2a2c3f52763834ea1a7b933702ba3b943